--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,21 @@
     "minimum-stability": "RC",
     "require": {
         "php": "^7.1.3",
+        "javiereguiluz/easyadmin-bundle": "^1.17",
+        "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/maker-bundle": "^1.0",
         "symfony/orm-pack": "^1.0",
+        "symfony/twig-bundle": "^4.0@RC",
+        "symfony/web-server-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "symfony/dotenv": "^4.0",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
